--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -2,53 +2,69 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="275.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="381.0" prefWidth="447.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
     <children>
-        <Label fx:id="lblOutput" layoutX="91.0" layoutY="129.0" prefHeight="17.0" prefWidth="118.0" />
-        <Button layoutX="117.0" layoutY="89.0" mnemonicParsing="false" onAction="#sayHello" text="Say Hello" />
-      <TabPane prefHeight="275.0" prefWidth="294.0" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-          <Tab text="Untitled Tab 1">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <GridPane layoutX="14.0" layoutY="139.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <Label text="Product Name" />
-                              <Label text="Manufacturer" GridPane.rowIndex="1" />
-                              <Label text="Item" GridPane.rowIndex="2" />
-                           </children>
-                        </GridPane>
-                        <Button layoutX="196.0" layoutY="205.0" mnemonicParsing="false" text="Add Product" />
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-          <Tab text="Untitled Tab 2">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </Tab>
-        </tabs>
-      </TabPane>
+        <TabPane prefHeight="381.0" prefWidth="447.0" tabClosingPolicy="UNAVAILABLE">
+            <tabs>
+                <Tab text="Product Line">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                            <children>
+                                <GridPane layoutX="33.0" layoutY="113.0" prefHeight="126.0" prefWidth="242.0">
+                                    <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    </columnConstraints>
+                                    <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    </rowConstraints>
+                                    <children>
+                                        <Label text="Product Name" />
+                                        <Label text="Manufacturer" GridPane.rowIndex="1" />
+                                        <Label text="Item" GridPane.rowIndex="2" />
+                                    </children>
+                                </GridPane>
+                        <Button fx:id="btnAddProduct" layoutX="327.0" layoutY="283.0" mnemonicParsing="false" onAction="#display" text="Add Product" />
+                            </children>
+                        </AnchorPane>
+                    </content>
+                </Tab>
+                <Tab text="Produce">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                            <children>
+                                <ListView layoutX="14.0" layoutY="72.0" prefHeight="269.0" prefWidth="226.0" />
+                                <ComboBox fx:id="comboBox" layoutX="269.0" layoutY="72.0" prefWidth="150.0" />
+                                <Button fx:id="btnRecordProduction" layoutX="286.0" layoutY="138.0" mnemonicParsing="false" onAction="#rpDisplay" text="Record Production" />
+                                <Label layoutX="85.0" layoutY="46.0" text="Choose Product" />
+                                <Label layoutX="300.0" layoutY="46.0" text="Choose Quantity" />
+                            </children></AnchorPane>
+                    </content>
+                </Tab>
+                <Tab text="Production Lob">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                            <children>
+                                <TextArea layoutX="14.0" layoutY="14.0" prefHeight="183.0" prefWidth="334.0" />
+                            </children></AnchorPane>
+                    </content>
+                </Tab>
+            </tabs>
+        </TabPane>
     </children>
 
     <stylesheets>
