--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="381.0" prefWidth="447.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
     <children>
         <TabPane prefHeight="381.0" prefWidth="447.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
@@ -38,7 +38,7 @@
                                         <Label text="Item" GridPane.rowIndex="2" />
                                     </children>
                                 </GridPane>
-                        <Button fx:id="btnAddProduct" layoutX="327.0" layoutY="283.0" mnemonicParsing="false" onAction="#display" text="Add Product" />
+                        <Button layoutX="327.0" layoutY="283.0" mnemonicParsing="false" onMouseClicked="#btnAddProduct" text="Add Product" />
                             </children>
                         </AnchorPane>
                     </content>
@@ -48,8 +48,8 @@
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
                                 <ListView layoutX="14.0" layoutY="72.0" prefHeight="269.0" prefWidth="226.0" />
-                                <ComboBox fx:id="comboBox" layoutX="269.0" layoutY="72.0" prefWidth="150.0" />
-                                <Button fx:id="btnRecordProduction" layoutX="286.0" layoutY="138.0" mnemonicParsing="false" onAction="#rpDisplay" text="Record Production" />
+                                <ComboBox layoutX="269.0" layoutY="72.0" prefWidth="150.0" />
+                                <Button layoutX="286.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#btnRecordProduction" text="Record Production" />
                                 <Label layoutX="85.0" layoutY="46.0" text="Choose Product" />
                                 <Label layoutX="300.0" layoutY="46.0" text="Choose Quantity" />
                             </children></AnchorPane>
