--- a/src/main/resources/styling.css
+++ b/src/main/resources/styling.css
@@ -1,6 +1,6 @@
 .root{
     -fx-font-size: 12px;
-    -fx-font-family: "Edwardian Script ITC";
+    -fx-font-family: "fantasy";
     -fx-background-color: orange;
 }
 
