--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -35,6 +36,9 @@
                                         <Label text="Product Name" />
                                         <Label text="Manufacturer" GridPane.rowIndex="1" />
                                         <Label text="Item" GridPane.rowIndex="2" />
+                              <TextField fx:id="tfProductName" GridPane.columnIndex="1" />
+                              <TextField fx:id="tfManufacturer" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="tfItem" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                     </children>
                                 </GridPane>
                         <Button layoutX="327.0" layoutY="283.0" mnemonicParsing="false" onAction="#showProduct" onMouseClicked="#btnAddProduct" text="Add Product" />
@@ -47,7 +51,7 @@
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
                                 <ListView layoutX="14.0" layoutY="72.0" prefHeight="269.0" prefWidth="226.0" />
-                                <ComboBox layoutX="269.0" layoutY="72.0" prefWidth="150.0" />
+                                <ComboBox fx:id="cmbQuantity" layoutX="269.0" layoutY="72.0" prefWidth="150.0" />
                                 <Button layoutX="286.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#btnRecordProduction" text="Record Production" />
                                 <Label layoutX="85.0" layoutY="46.0" text="Choose Product" />
                                 <Label layoutX="300.0" layoutY="46.0" text="Choose Quantity" />
