--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -15,13 +17,13 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@styling.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="719.0" stylesheets="@styling.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
     <children>
-        <TabPane prefHeight="381.0" prefWidth="447.0" tabClosingPolicy="UNAVAILABLE">
+        <TabPane prefHeight="381.0" prefWidth="712.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
                 <Tab text="Product Line">
                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="352.0" prefWidth="793.0">
                             <children>
                                 <GridPane layoutX="33.0" layoutY="113.0" prefHeight="126.0" prefWidth="293.0">
                                     <columnConstraints>
@@ -42,7 +44,15 @@
                               <ChoiceBox fx:id="chbItem" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                     </children>
                                 </GridPane>
-                        <Button fx:id="btnAddProduct" layoutX="327.0" layoutY="283.0" mnemonicParsing="false" onAction="#btnAddProduct" text="Add Product" />
+                        <Button fx:id="btnAddProduct" layoutX="180.0" layoutY="276.0" mnemonicParsing="false" onAction="#btnAddProduct" text="Add Product" />
+                        <TableView fx:id="tvProducts" layoutX="384.0" layoutY="39.0" prefHeight="200.0" prefWidth="321.0">
+                          <columns>
+                            <TableColumn fx:id="tcID" prefWidth="75.0" text="ID" />
+                              <TableColumn fx:id="tcType" prefWidth="75.0" text="Type" />
+                              <TableColumn fx:id="tcManufacturer" prefWidth="75.0" text="Manufacturer" />
+                              <TableColumn fx:id="tcName" prefWidth="75.0" text="Name" />
+                          </columns>
+                        </TableView>
                             </children>
                         </AnchorPane>
                     </content>
@@ -51,7 +61,7 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <ListView layoutX="14.0" layoutY="72.0" prefHeight="269.0" prefWidth="226.0" />
+                                <ListView fx:id="lvChooseProduct" layoutX="14.0" layoutY="72.0" prefHeight="269.0" prefWidth="226.0" />
                                 <ComboBox fx:id="cmbQuantity" layoutX="269.0" layoutY="72.0" prefWidth="150.0" />
                                 <Button fx:id="btnRecordProduction" layoutX="286.0" layoutY="138.0" mnemonicParsing="false" onAction="#btnRecordProduction" text="Record Production" />
                                 <Label layoutX="85.0" layoutY="46.0" text="Choose Product" />
@@ -59,11 +69,11 @@
                             </children></AnchorPane>
                     </content>
                 </Tab>
-                <Tab text="Production Lob">
+                <Tab text="Production Log">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <TextArea layoutX="14.0" layoutY="14.0" prefHeight="183.0" prefWidth="334.0" />
+                                <TextArea fx:id="taProductionLog" layoutX="14.0" layoutY="14.0" prefHeight="183.0" prefWidth="334.0" />
                             </children></AnchorPane>
                     </content>
                 </Tab>
